[gd_scene load_steps=6 format=2]

[ext_resource path="res://View/basicMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Control/interface/goToCustomModeSelect.gd" type="Script" id=2]
[ext_resource path="res://Model/buttons/AddButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Xolonium_32.tres" type="DynamicFont" id=4]
[ext_resource path="res://Control/interface/CustomModeMyQuizzes.gd" type="Script" id=5]

[node name="World" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="Header" parent="TemplateScreen" index="3"]
margin_left = 348.31
margin_top = 22.0833
margin_right = -536909.0
margin_bottom = 91.0833
text = "CUSTOM MODE"

[node name="PlayBoard" parent="." index="1"]
margin_top = 93.0

[node name="MarginContainer" type="MarginContainer" parent="PlayBoard" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayBoard/MarginContainer" index="0"]
margin_left = 20.0
margin_top = 30.0
margin_right = 559.0
margin_bottom = 430.0
custom_constants/separation = -270

[node name="Title" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer" index="0"]
margin_right = 539.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "My Quizzes"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="PlayBoard/MarginContainer/VBoxContainer" index="1"]
margin_top = 65.0
margin_right = 539.0
margin_bottom = 400.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListOfAvailableQuizzes" type="VBoxContainer" parent="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer" index="0"]
margin_right = 539.0
margin_bottom = 335.0
rect_min_size = Vector2( 270, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="BackButton" parent="." index="2"]
script = ExtResource( 2 )

[node name="AddButton" parent="." index="4" instance=ExtResource( 3 )]
margin_left = 894.538
margin_top = 489.535
margin_right = 996.538
margin_bottom = 577.535

[node name="HTTPRequest" type="HTTPRequest" parent="." index="5"]
[connection signal="pressed" from="BackButton" to="BackButton" method="_on_BackButton_pressed"]
[connection signal="pressed" from="AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
